<resources>
    <string name="app_name">Sirius</string>
    <string name="strategy">STRATEGY</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="moba">MOBA</string>

    <string name="reviewRatings">Review &amp; Ratings</string>
    <string name="digit_rating">4.9</string>
    <string name="count_reviews">70M Reviews</string>

    <string name="name_review_1">Auguste Conte</string>
    <string name="date_review_1">February 14, 2019</string>
    <string name="review_1">\"Once you start to learn its secrets, there\'s a wild and exciting variety of play here that\'s unmatched, even by its peers.\"</string>
    <string name="name_review_2">Jang Marcelino</string>
    <string name="date_review_2">February 14, 2019</string>
    <string name="review_2">\"Once you start to learn its secrets, there\'s a wild and exciting variety of play here that\'s unmatched, even by its peers.\"</string>

    <string name="install">Install</string>
    <string name="imageAppDesc">Background application image</string>
    <string name="iconAppDesc">Icon application</string>
    <string name="buttonOptionDesc">Option button</string>
    <string name="buttonBackDesc">Back button</string>
    <string name="userImageDesc">User profile photo</string>
</resources>